part-2/project/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-backend-dep
  namespace: project
  labels:
    app: project-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      containers:
        - name: backend
          image: <DOCKERHUB_USER>/project-backend:2.0
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: project-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
    - port: 3001
      targetPort: 3001
